@@ -132,6 +132,22 @@ name|solr
 operator|.
 name|common
 operator|.
+name|SolrException
+operator|.
+name|ErrorCode
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
 name|cloud
 operator|.
 name|ClosableThread
@@ -1800,6 +1816,94 @@ operator|.
 name|COLLECTION_PROP
 argument_list|)
 decl_stmt|;
+assert|assert
+name|collection
+operator|.
+name|length
+argument_list|()
+operator|>
+literal|0
+operator|:
+name|message
+assert|;
+try|try
+block|{
+if|if
+condition|(
+operator|!
+name|zkClient
+operator|.
+name|exists
+argument_list|(
+name|ZkStateReader
+operator|.
+name|COLLECTIONS_ZKNODE
+operator|+
+literal|"/"
+operator|+
+name|collection
+argument_list|,
+literal|true
+argument_list|)
+condition|)
+block|{
+name|log
+operator|.
+name|warn
+argument_list|(
+literal|"Could not find collection node for "
+operator|+
+name|collection
+operator|+
+literal|", skipping publish state"
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+catch|catch
+parameter_list|(
+name|KeeperException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+name|e
+argument_list|)
+throw|;
+block|}
+catch|catch
+parameter_list|(
+name|InterruptedException
+name|e
+parameter_list|)
+block|{
+name|Thread
+operator|.
+name|currentThread
+argument_list|()
+operator|.
+name|interrupt
+argument_list|()
+expr_stmt|;
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+name|e
+argument_list|)
+throw|;
+block|}
 name|String
 name|coreNodeName
 init|=
