@@ -5085,6 +5085,30 @@ name|NUM_SHARDS_PROP
 argument_list|)
 expr_stmt|;
 block|}
+assert|assert
+name|cd
+operator|.
+name|getCloudDescriptor
+argument_list|()
+operator|.
+name|getCollectionName
+argument_list|()
+operator|!=
+literal|null
+operator|&&
+name|cd
+operator|.
+name|getCloudDescriptor
+argument_list|()
+operator|.
+name|getCollectionName
+argument_list|()
+operator|.
+name|length
+argument_list|()
+operator|>
+literal|0
+assert|;
 name|String
 name|coreNodeName
 init|=
