@@ -902,6 +902,27 @@ name|getAbsolutePath
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|CloudDescriptor
+name|cloudDesc
+init|=
+operator|new
+name|CloudDescriptor
+argument_list|()
+decl_stmt|;
+name|cloudDesc
+operator|.
+name|setCollectionName
+argument_list|(
+literal|"testcore"
+argument_list|)
+expr_stmt|;
+name|dcore
+operator|.
+name|setCloudDescriptor
+argument_list|(
+name|cloudDesc
+argument_list|)
+expr_stmt|;
 if|if
 condition|(
 name|container1
